--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "string-wrapper"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Simon Sapin <simon.sapin@exyr.org>"]
-license = "MIT"
+license = "MIT / Apache-2.0"
 repository = "https://github.com/SimonSapin/rust-std-candidates"
 description = "A String with generic bytes storage"
 
