--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.6"
 authors = ["Christopher Armstrong <radix@twistedmatrix.com>"]
 license = "MIT / Apache-2.0"
 repository = "https://github.com/radix/string-wrapper"
-description = "A stack-allocated string with generic bytes storage"
+description = "A possibly-stack-allocated string with generic bytes storage"
 
 [lib]
 path = "lib.rs"
