don't run serde on travis stable because 1.15 isn't out yet, and note that Rust 1.15 is required for serde in the README.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 sudo: false
 language: rust
+matrix:
+  include:
+    - rust: nightly
+    - rust: beta
+    - rust: stable
+      env: # Drop this once stable >= 1.15!
+        - NOSERDE=1
 rust:
   - nightly
   - beta
   - stable
 script:
   - cargo test
-  - cargo test --features use_serde
+  - ([ "$NOSERDE" == 1 ] || cargo test --features use_serde)
