run `cargo build` explicitly in travis
`cargo test` doesn't seem to trigger linting (like missing_docs), so
we have to run build explicitly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ matrix:
       env: # Drop this once stable >= 1.15!
         - NOSERDE=1
 script:
+  - cargo build
   - cargo test
+  - ([ "$NOSERDE" == 1 ] || cargo build --features use_serde)
   - ([ "$NOSERDE" == 1 ] || cargo test --features use_serde)
