--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ matrix:
     - rust: nightly
     - rust: beta
     - rust: stable
-      env: # Drop this once stable >= 1.15!
-        - NOSERDE=1
 script:
   - cargo build
   - cargo test
-  - ([ "$NOSERDE" == 1 ] || cargo build --features use_serde)
-  - ([ "$NOSERDE" == 1 ] || cargo test --features use_serde)
+  - cargo build --features use_serde
+  - cargo test --features use_serde
